RESOLVED FIXED57534
[GTK] Warnings happening because of unhandled switch cases in AccessibilityObjectWrapperAtk
https://bugs.webkit.org/show_bug.cgi?id=57534
Summary [GTK] Warnings happening because of unhandled switch cases in AccessibilityOb...
Mario Sanchez Prada
Reported 2011-03-31 03:23:25 PDT
[GTK] Warnings happening because of unhandled switch cases in AccessibilityObjectWrapperAtk
Attachments
Patch (1.39 KB, patch)
2011-03-31 03:24 PDT, Mario Sanchez Prada
xan.lopez: review+
Mario Sanchez Prada
Comment 1 2011-03-31 03:24:57 PDT
Xan Lopez
Comment 2 2011-03-31 09:19:37 PDT
Comment on attachment 87689 [details] Patch OK.
Mario Sanchez Prada
Comment 3 2011-03-31 09:57:39 PDT
Note You need to log in before you can comment on or make changes to this bug.