2011-03-31  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Warnings happening because of unhandled switch cases in AccessibilityObjectWrapperAtk
        https://bugs.webkit.org/show_bug.cgi?id=57534

        Fix compilation warnings.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (getAttributeSetForAccessibilityObject): Add unhandled cases.

Canonical link: https://commits.webkit.org/72388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82592 268f45cc-cd09-0410-ab3c-d52691b4dbfc